--- a/plugins/CoreHome/stylesheets/coreHome.less
+++ b/plugins/CoreHome/stylesheets/coreHome.less
@@ -243,7 +243,8 @@ a.Piwik_Popover_Error_Back {
     dt {
         clear: both;
         float: left;
-        width: 20px;
+        min-width: 20px;
+        padding: 0 3px;
         height: 20px;
         text-align: center;
         margin-top: 9px;
